--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <div class="product-container">
           <div class="product-image">
             <!-- image goes here -->
+            <img v-bind:src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
             <p>{{ description }}</p>
+            <a :href="url">Test link</a>
           </div>
         </div>
       </div>
